--- a/2.html
+++ b/2.html
@@ -13,6 +13,15 @@
         <li>1. aa</li>
         <li>2. bb</li>
     </ul><br>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DNMGS3MCQH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DNMGS3MCQH');
+</script>
 </head>
 <body>
     <table border="100px">
