--- a/3.html
+++ b/3.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTH-8">
     <title>3.html</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DNMGS3MCQH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DNMGS3MCQH');
+</script>
 </head>
 <body>
     <h1>3.html 페이지 입니다</h1>
